Fixed broken styling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--cinnamon);
+  /* background-color: var(--cinnamon); */
   color: var(--beige);
   
 }
@@ -115,11 +115,13 @@ ul {
 
 .text-left {
   text-align: left;
+  padding-left:15px;
+  padding-bottom: 160px;
 }
 
 p {
-  margin-left: 10px;
-  margin-right: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 a:hover {
@@ -191,6 +193,7 @@ img {
 }
 
 .contact-form {
+  width:100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -295,8 +298,8 @@ img {
   }
 
   .resume-list{
-    text-decoration: none;
-    margin-left: 50px;
+    /* text-decoration: none; */
+    /* margin-left: 50px; */
   }
 }
 
